@@ -1,0 +1,15 @@
+/* Copyright 2010, University of Colorado */
+
+package edu.colorado.phet.capacitorlab.view;
+
+import edu.colorado.phet.common.piccolophet.PhetPNode;
+import edu.umd.cs.piccolo.nodes.PText;
+
+
+public class DielectricExcessChargeNode extends PhetPNode {
+
+    public DielectricExcessChargeNode() {
+        //XXX
+        addChild( new PText( "excess charge" ) );//XXX
+    }
+}
